--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "init": "node index.js",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "nyc mocha --recursive --exit --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,18 @@
   "homepage": "https://github.com/manelcecs/home-finance#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.2.0",
     "mongoose": "^5.10.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "supertest": "^5.0.0"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "jest": "^26.6.1",
+    "nyc": "^15.1.0"
   }
 }
