--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,13 @@
 version: 2.1
 orbs:
-  node: circleci/node@3.0.0
+  heroku: circleci/heroku@1.2.3
 workflows:
-  node-tests:
+  heroku_deploy:
     jobs:
-      - node/test
+      - build
+      - heroku/deploy-via-git:
+          requires:
+            - build
+        filters:
+          branches:
+            only: master
