--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,4 @@ orbs:
 workflows:
   heroku_deploy:
     jobs:
-      - build
-      - heroku/deploy-via-git:
-          requires:
-            - build
-        filters:
-          branches:
-            only: master
+      - heroku/deploy-via-git
