--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,6 @@ workflows:
   heroku_deploy:
     jobs:
       - heroku/deploy-via-git:
-        - filter:
-          - branch:
-            - only: master
+        filter:
+          branch:
+            only: master
