--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,11 @@ workflows:
   heroku_deploy:
     jobs:
       - build:
-          filters:
-            branches:
-              only: master
+        filters:
+          branches:
+            only: master
       - heroku/deploy-via-git:
-          requires:
-            - build
-          filter:
+        requires:
+          - buildfilter:
             branch:
               only: master
