Fix: indentation and test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,18 @@ orbs:
 workflows:
   heroku_deploy:
     jobs:
+      - test:
+          filters:
+            branches:
+              only: master
       - build:
-        filters:
-          branches:
-            only: master
+          requires: test
+            filters:
+            branches:
+              only: master
       - heroku/deploy-via-git:
-        requires:
-          - buildfilter:
+          requires:
+            - build
+          filter:
             branch:
               only: master
