--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - heroku/install
       - heroku/deploy-via-git
 orbs:
-  heroku: circleci/heroku@x.y
+  heroku: circleci/heroku@1.2.3
 version: 2.1
 workflows:
   heroku_deploy:
