--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 jobs:
   deploy:
     executor: heroku/default
+    branches:
+      only: master
     steps:
       - checkout
       - heroku/install
