--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ version: 2.1
 workflows:
   heroku_deploy:
     jobs:
-      - filters:
+      - deploy:
+        filters:
           branches:
             only: master
-      - deploy
